--- a/src/composer.json
+++ b/src/composer.json
@@ -15,7 +15,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
-        "shetabit/payment": "^5.4"
+        "shetabit/payment": "^5.4",
+        "unisharp/laravel-filemanager": "^2.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6.7",
